--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      window.initMap = function() {
+        console.log('Google Maps API loaded successfully');
+        // This function will be called when the Maps API is loaded
+        window.googleMapsLoaded = true;
+      };
+    </script>
     <script 
-      src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places&loading=async"
+      src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places&callback=initMap"
+      defer
     ></script>
     <style>
       /* Add this to remove any default margins */
